test/files/neg/t4612.check
t4612.scala:13: error: type mismatch;
 found   : t4612.this.Bob
 required: _1
      def foo = new Bob
                ^
one error found
